# rwanda

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  t.txt  w.py  wl.py
.github/workflows/: python-publish.yml
rwanda/: __init__.py  local.py  locations.txt
rwanda/locations/: __init__.py  main.py
rwanda/store/: __init__.py  locations.json
tests/: test_places.py
